src/components/header/header.scss
section.header {
  width: 100vw;
  height: 100vh;

  background: linear-gradient(0deg, var(--color-primary), var(--color-secondary));
  color: white;

  main {
    display: flex;
    flex-direction: column;

    justify-content: center;
    align-items: center;

    height: 100%;

    padding-top: 1.75rem;

    div.gatsby-image-wrapper {
      width: 40vw;
      height: 40vw;
      max-width: 260px;
      max-height: 260px;
      border-radius: 50%;
      margin: 0 0 2.25rem;

      @media (max-height: 560px) {
        display: none;
      }
    }

    p {
      text-align: center;
      max-width: 620px;
      font-size: 1.5rem;
    }
  }
}

